<resources>
    <string name="placeholder1" translatable="false">matics_placeholder_matics_number_1</string>
    <string name="placeholder2" translatable="false">matics_placeholder_matics_number_2</string>
    <string name="app_name">Matics Operator</string>
    <string name="no_communication">No communication</string>
    <string name="pee_value_null" translatable="false">--</string>
    <string name="default_empty_field" translatable="false">--</string>
    <string name="unknown">Unknown</string>
    <string name="link_machine">Select your machine</string>
    <string name="screen_title">Matics</string>
    <string name="login_fields_error">Fill in all fields</string>
    <string name="login">Log In</string>
    <string name="save">Save</string>
    <string name="login_fields_factory_name_hint">Factory eName</string>
    <string name="login_fields_factory_url_hint">Factory URL</string>
    <string name="login_fields_user_name_hint">User Name</string>
    <string name="login_fields_password_hint">Password</string>
    <string name="login_dialog_dismiss">DISMISS</string>
    <string name="login_dialog_dismiss_all">DISMISS FOR THIS SHIFT</string>
    <string name="network_error">Network Error</string>
    <string name="credentials_error">Username/Password mismatch</string>
    <string name="url_error">Site URL not correct</string>
    <string name="could_not_log_in">Could not log in -</string>
    <string name="could_not_get_data">Could not get data</string>
    <string name="could_not_reach_server_error">Error - could not reach server</string>
    <string name="unrecognized_operator">Unrecognized operator</string>
    <string name="select_machine_screen_title">Select Machine</string>
    <string name="done">DONE</string>
    <string name="add_another">Add Machine</string>
    <string name="ok">OK</string>
    <string name="go">Go</string>
    <string name="machine_id_name">Machine ID or eName</string>
    <string name="enter_machine_id_name">Enter Machine\nID or eName</string>
    <string name="no_notifications">No Notifications</string>
    <string name="no_data">No Data</string>
    <string name="error_rest">Error in REST service</string>
    <string name="jobs_actions">Job Actions</string>
    <string name="job_id">Job ID</string>
    <string name="product_name">Product eName</string>
    <string name="erp">ERP</string>
    <string name="planned_start">Planned Start</string>
    <string name="number_of_units">Number Of &placeholder1;</string>
    <string name="new_job">New Job</string>
    <string name="new_job_details">New job details</string>
    <string name="product_id">Product id</string>
    <string name="erp_id">ERP ID</string>
    <string name="quantity">Quantity</string>
    <string name="activate_new_job">Activate</string>
    <string name="could_not_retrieve_job_list">Could not retrieve job list</string>
    <string name="product">Product</string>
    <string name="id">ID -</string>
    <string name="job">Job</string>
    <string name="josh">Josh</string>
    <string name="shift">Shift</string>
    <string name="machine_status">Machines status</string>
    <string name="operator_id">Operator ID</string>
    <string name="operator_name">Operator eName</string>
    <string name="error_shift_log">Fail to perform GetMachineShiftLog function</string>
    <string name="operator_sign_in">Operator\nSign In</string>
    <string name="operator_sign_in_action_bar">Operator Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="duration">Duration</string>
    <string name="report">REPORT</string>
    <string name="stop_event">Stop Event</string>
    <string name="enter_with_your_id">Enter\nYour ID</string>
    <string name="report_rejects">Report Rejects</string>
    <string name="reject_reason">Reject reason</string>
    <string name="cause">Cause</string>
    <string name="next">Next</string>
    <string name="units">Units</string>
    <string name="weight">Weight</string>
    <string name="material_weight_alarm">Material Weight Alarm</string>
    <string name="dashes" translatable="false">- -</string>
    <string name="no_reasons">No reports are available</string>
    <string name="report_stop_event_reason">Report Stop Event Reason</string>
    <string name="report_stop_reason">Report Stop\nReason</string>
    <string name="report_reject_nreason">Report Reject\nReason</string>
    <string name="report_stop_start">"Start "</string>
    <string name="report_stop_resume">"End"</string>
    <string name="report_cycle_nunits">Change &placeholder1; in \nCycle</string>
    <string name="report_cycle_units">Change &placeholder1; in Cycle</string>
    <string name="report_inventory_nitem_production">Report Production \n</string>
    <string name="report_inventory_item_production">Report Production</string>
    <string name="package_type">Package Type</string>
    <string name="settings">Settings</string>
    <string name="operator_app_settings">Operator\nApp\nSettings</string>
    <string name="language">Language</string>
    <string name="factory_sign_in">Factory Sign In</string>
    <string name="change">Change</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="refresh_reporting_data">Refresh Reporting Data</string>
    <string name="operator_napp_nadvanced_nsettings">Operator\nApp\nAdvanced\nSettings</string>
    <string name="polling_frequency">Polling Frequency</string>
    <string name="request_timeout">Request Timeout</string>
    <string name="popup_timeout">Pop up Timeout</string>
    <string name="request_timeout_range_error">Request timeout must be in range 20-120 seconds</string>
    <string name="popup_timeout_range_error">Pop up timeout must be in range 5-30 seconds</string>
    <string name="polling_frequency_range_error">Polling frequency must be in range 20-60 seconds</string>
    <string name="refreshed">Refreshed</string>
    <string name="one">1</string>
    <string name="end_">End: </string>
    <string name="start_">Start: </string>
    <string name="chart_min_">Min: </string>
    <string name="chart_standard_">Standard:&#160;</string>
    <string name="chart_max_">Max: </string>
    <string name="space" translatable="false">&#160;</string>
    <string name="switch_user">Switch User</string>
    <string name="standard">Standard&#160;</string>
    <string name="total_required">Total Required&#160;</string>
    <string name="shift_log_min">Min&#160;</string>
    <string name="shift_log_max">Max&#160;</string>
    <string name="shift_log_standard">Standard&#160;</string>
    <string name="approving_technician">Approving Technician</string>
    <string name="approve">Approve</string>
    <string name="setup_end">Setup End</string>
    <string name="first_item_approval">Setup End</string>
    <string name="send_logs">Send Logs</string>
    <string name="alarm">"Alarm"</string>
    <string name="loading_data">Loading data...</string>
    <string name="no_data_chart">You need to provide data\nfor the chart</string>
    <string name="approve_first_item">End Setup</string>
    <string name="days">Days</string>
    <plurals name="hours">
        <item quantity="zero">Hour</item>
        <item quantity="one">Hour</item>
        <item quantity="other">Hours</item>
    </plurals>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="log_in_to_nyour_factory">Log In To\nYour Factory</string>
    <string name="machine_id" translatable="false">&#160;</string>
    <string name="pConfig">configuration</string>
    <string name="channel_0">Channel 0</string>
    <string name="channel_1_99">Channel 1–99</string>
    <string name="channel_100">Channel 100</string>
    <string name="events_selected">Events selected:</string>
    <string name="events">events</string>
    <string name="loading_file">Loading File…</string>
    <string name="loading_error">Loading error</string>
    <string name="production_parameters">Production parameters</string>
    <string name="smaller_than_symbole" translatable="false"><![CDATA[<]]></string>
    <string name="actionnable_jobs">Actionable Jobs</string>
    <string name="search_job_id_or_product_name">Search Job ID or Product eName</string>
    <string name="search">Search</string>
    <string name="activate">Activate</string>
    <string name="no_available_image">No Available Image</string>
    <string name="name">Name</string>
    <string name="catalog">Catalog</string>
    <string name="amount">Amount</string>
    <string name="materials">Materials</string>
    <string name="mold">Mold</string>
    <string name="mold_catalog">Mold Catalog</string>
    <string name="cavities_actual">&placeholder1; In Cycle Actual</string>
    <string name="cavities_standard">&placeholder1; In Cycle STD</string>
    <string name="actions">Actions</string>
    <string name="action_details">Action details</string>
    <string name="you_can_add_a_note">You can add a note</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="start_job_success">Job Started Successfully</string>
    <string name="end_setup_success">End Setup Successfully</string>
    <string name="get_panding_jobs_failed_error">Get Pending Jobs Failed Error</string>
    <string name="get_jobs_details_failed_error">Get Job Details Failed Error</string>
    <string name="reject_reason_setup">Setup</string>
    <string name="no_available_pdf">No Available Pdf</string>
    <string name="add_note">Add Note</string>
    <string name="min_duration_shiftlog">Min. Event Duration: </string>
    <string name="minutes">Min.</string>
    <string name="minutes_long">minutes</string>
    <string name="tutorial_job_actions">Job Actions - New Job</string>
    <string name="tutorial_job_actions_desc">Begin prep for the next job ahead of time</string>
    <string name="tutorial_swipe">Swipe the dashboard sideways to view the recipe for the current job</string>
    <string name="tutorial_event_log_title">Event Log</string>
    <string name="tutorial_event_log_desc">Report single or several stops together when they share the same reason.</string>
    <string name="tutorial_split_event_title">Split Event</string>
    <string name="tutorial_split_event_Desc">Use the scissors to split an event. That way, you can report a different reason for each stretch.</string>
    <string name="kg">kg</string>
    <string name="gram">gr</string>
    <string name="sign_out">Sign Out</string>
    <string name="one_hundred_percent" translatable="false">100%</string>
    <string name="signed_out_successfully">Signed-out Successfully</string>
    <string name="signed_in_successfully">Signed-in Successfully</string>
    <string name="notes">Notes</string>
    <string name="submit">submit</string>
    <string name="edit_note">Edit Note</string>
    <string name="enter_note_here">Enter Your Note Here</string>
    <string name="fill_units_or_weight">* Please report &placeholder1; or Weight</string>
    <string name="emerald_flavor_name" translatable="false">emerald</string>
    <string name="lenox_flavor_name" translatable="false">Lenox</string>
    <string name="machine">Machine</string>
    <string name="activate_job_dialog_message">You Are About to Activate a New Job, \n Are You Sure You Want to Proceed?</string>
    <string name="filter_by">Filter By</string>
    <string name="active_jobs">Active Jobs</string>
    <string name="index">INDEX</string>
    <string name="catalog_maj">CATALOG</string>
    <string name="units_target">&placeholder1; TARGET</string>
    <string name="units_produced">&placeholder1; PRODUCED</string>
    <string name="end_time_actual">END TIME (ACTUAL)</string>
    <string name="job_left_time">JOB LEFT TIME</string>
</resources>