<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="22dp"
    android:layout_marginEnd="100dp"
    android:orientation="horizontal"
    android:weightSum="100">

    <TextView
        android:id="@+id/FJL_index"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/index"
        android:textColor="@color/grey_lite"
        android:textSize="14sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="5" />

    <TextView
        android:id="@+id/FJL_catalog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/catalog_maj"
        android:textColor="@color/grey_lite"
        android:textSize="14sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="5" />

    <TextView
        android:id="@+id/FJL_target"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/units_target"
        android:textColor="@color/grey_lite"
        android:textSize="14sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="5" />

    <TextView
        android:id="@+id/FJL_produced"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/units_produced"
        android:textColor="@color/grey_lite"
        android:textSize="14sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="5" />

    <TextView
        android:id="@+id/FJL_end_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/end_time_actual"
        android:textColor="@color/grey_lite"
        android:textSize="14sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="5" />

    <TextView
        android:id="@+id/FJL_job_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/job_left_time"
        android:textColor="@color/grey_lite"
        android:textSize="14sp" />

</LinearLayout>

