<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AJA_left_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/active_jobs"
            android:textColor="@color/blue1"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/AJA_search_et"
            android:layout_width="283dp"
            android:layout_height="37dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/AJA_search_btn"
            android:background="@drawable/box_strok_grey"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/grey1"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/AJA_search_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/blue1"
            android:src="@drawable/ic_search_white_24dp" />

        <Spinner
            android:id="@+id/AJA_search_rv"
            android:layout_width="184dp"
            android:layout_height="37dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/AJA_search_et" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/AJA_search_rv"
            android:text="@string/filter_by"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="100dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/FJL_index"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/index"
            android:textColor="@color/grey_lite"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="5" />

        <TextView
            android:id="@+id/FJL_catalog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/catalog_maj"
            android:textColor="@color/grey_lite"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="5" />

        <TextView
            android:id="@+id/FJL_target"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/units_target"
            android:textColor="@color/grey_lite"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="5" />

        <TextView
            android:id="@+id/FJL_produced"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/units_produced"
            android:textColor="@color/grey_lite"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="5" />

        <TextView
            android:id="@+id/FJL_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/end_time_actual"
            android:textColor="@color/grey_lite"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="5" />

        <TextView
            android:id="@+id/FJL_job_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/job_left_time"
            android:textColor="@color/grey_lite"
            android:textSize="14sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/AJA_product_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="13dp"
        android:scrollbars="vertical" />

</LinearLayout>
