<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_event"
        android:textColor="@color/color_jobs_row"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="@color/dialog_text_gray"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/dialog_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="--"
            android:textColor="@color/dialog_text_gray"
            android:textSize="23dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textColor="@color/dialog_text_gray"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/dialog_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="--"
            android:textColor="@color/dialog_text_gray"
            android:textSize="23dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textColor="@color/dialog_text_gray"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/dialog_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="--"
            android:textColor="@color/dialog_text_gray"
            android:textSize="23dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/login_dialog_dismiss"
            android:textColor="@android:color/black"
            android:textSize="23dp" />


        <TextView
            android:id="@+id/dialog_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:textColor="@color/dismiss_dialog"
            android:textSize="23dp" />
    </LinearLayout>

</LinearLayout>