<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:id="@+id/job_row_layout"
            >
            <TextView
                android:id="@+id/text_view_job_id"
                android:layout_width="0dp"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="left"
                android:text="@string/job_id"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/adapter_text_view_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="left"
                android:text="@string/product_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/adapter_text_view_ERP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="left"
                android:text="@string/erp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/adapter_text_planned_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="left"
                android:text="@string/planned_start"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/adapter_text_view_number_of_units"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:gravity="left"
                android:text="@string/quantity"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_gray" />
</LinearLayout>