<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="10">

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3.4" />

    <TextView
        android:id="@+id/ISEL_start"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.45"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/start"
        android:textColor="@color/default_gray"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeTextType="uniform" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".2" />

    <TextView
        android:id="@+id/ISEL_end"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.45"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/end"
        android:textColor="@color/default_gray"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeTextType="uniform" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".2" />

    <TextView
        android:id="@+id/ISEL_duration"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.45"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/duration"
        android:textColor="@color/default_gray"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeTextType="uniform" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".2" />

    <TextView
        android:id="@+id/ISEL_machine"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.45"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/machine"
        android:textColor="@color/default_gray"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeTextType="uniform" />

</LinearLayout>